--- a/.bazelrc
+++ b/.bazelrc
@@ -419,7 +419,7 @@ build:rbe --spawn_strategy=remote,worker,standalone,local
 test:rbe --test_env=USER=anon
 # Attempt to minimize the amount of data transfer between bazel and the remote
 # workers:
-build:rbe --remote_download_toplevel
+#build:rbe --remote_download_toplevel
 
 build:rbe_linux_base --config=rbe
 build:rbe_linux_base --action_env=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin"
@@ -537,7 +537,7 @@ build:rbe_win --define=override_eigen_strong_inline=true
 build:rbe_win --jobs=100
 
 # Don't build the python zip archive in the RBE build.
-build:rbe_win --remote_download_minimal
+#build:rbe_win --remote_download_minimal
 build:rbe_win --enable_runfiles
 build:rbe_win --nobuild_python_zip
 
